--- a/app/src/main/res/layout/movie_trailer_detail.xml
+++ b/app/src/main/res/layout/movie_trailer_detail.xml
@@ -46,7 +46,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_trailerWord" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_trailerWord"
+                android:fillViewport="true"/>
 
         </android.support.constraint.ConstraintLayout>
 
